// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CoverArt component > matches snapshot with custom alt 1`] = `
<div>
  <div
    class="flex justify-center md:justify-start"
  >
    <img
      alt="Album Cover"
      class="aspect-square w-full rounded-md object-cover sm:w-72 md:w-80 lg:w-96 xl:w-[50rem]"
      src="http://example.com/cover.jpg"
    />
  </div>
</div>
`;

exports[`CoverArt component > matches snapshot with default alt 1`] = `
<div>
  <div
    class="flex justify-center md:justify-start"
  >
    <img
      alt="Cover Art"
      class="aspect-square w-full rounded-md object-cover sm:w-72 md:w-80 lg:w-96 xl:w-[50rem]"
      src="http://example.com/cover.jpg"
    />
  </div>
</div>
`;
